# codex-styler

./: .gitignore  ASSET_LICENSES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  lighthouserc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  companion-package-bug.yml  companion-proposal.yml  config.yml  feature.yml  theme.yml  windows-compatibility.yml
.github/release-notes/: v0.1.0-alpha.1.md  v0.1.0-alpha.2.md  v0.1.0-alpha.3.md  v0.1.0-alpha.4.md  v0.1.0-alpha.5.md  v0.1.0-alpha.6.md  v0.1.0-alpha.7.md  v0.1.0-alpha.8.md  v0.1.0-alpha.9.md  v0.2.0-beta.1.md  v0.2.0-beta.2.json  v0.2.0-beta.2.md  v0.2.0-beta.3.json  v0.2.0-beta.3.md  v0.2.0-beta.4.json  v0.2.0-beta.4.md  (+8 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: cdp.rs  codex.rs  composer-moments.js  composer-settings-adapter.js  diagnostics.rs  error.rs  lib.rs  main.rs  model.rs  runtime.js
docs/: architecture.md  assets-and-replacement.md  companion-format.md  creating-companions.md  diagnostics.md  product-quality-plan.md  releasing.md  security-model.md  theme-format.md
scripts/: build-video-companion.py  check-github-language.mjs  check-site-links.mjs  serve-site.mjs  verify-release-version.mjs
(+180 files in other folders)
